--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
 file.reference.ibxm.jar=C:\\Users\\Aaron\\Documents\\GitHub\\RippleTest\\RippleTest\\lib\\ibxm.jar
 file.reference.lwjgl.jar=C:\\Users\\Aaron\\Documents\\GitHub\\RippleTest\\RippleTest\\lib\\lwjgl.jar
 file.reference.slick.jar=C:\\Users\\Aaron\\Documents\\GitHub\\RippleTest\\RippleTest\\lib\\slick.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Aaron\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
